[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Center" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Overlay/Center"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameOverLabel" type="Label" parent="Overlay/Center/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.25, 0.25, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
text = "GAME OVER"

[node name="FinalScoreLabel" type="Label" parent="Overlay/Center/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
text = "0"

[node name="StatsBox" type="VBoxContainer" parent="Overlay/Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WavesLabel" type="Label" parent="Overlay/Center/VBox/StatsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "Waves Survived: 0"

[node name="DestroyedLabel" type="Label" parent="Overlay/Center/VBox/StatsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "Enemies Destroyed: 0"

[node name="AccuracyLabel" type="Label" parent="Overlay/Center/VBox/StatsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "Accuracy: 0%"

[node name="RestartButton" type="Button" parent="Overlay/Center/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "PLAY AGAIN"
